--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ node_js:
   
   deploy:
   - provider: azure_web_apps
-    slot: name-slot
+    slot: easv-uat
     on: develop
   - provider: azure_web_apps
     slot: name-slot
