updated travis to fit branches

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,9 @@ node_js:
 deploy:
   - provider: azure_web_apps
     slot: easv-uat
-    on: feature
+    on: development
+  - provider: azure_web_apps
+    slot: easv-e2e
+    on: release
+  - provider: azure_web_apps
+    on: master
