--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,12 @@ language: node_js
 node_js:
   - "iojs"
   - "7"
+deploy:
+  - provider: azure_web_apps
+    slot: easv-uat
+    on: develop
+  - provider: azure_web_apps
+    slot: easv-uat
+    on: release
+  - provider: azure_web_apps
+    on: master
